--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>My Cat Tinder</title>
-    <link rel="stylesheet" href="%PUBLIC_URL%/bootstrap.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
